<resources>
    <string name="app_name">Android_lesson_2</string>
    <string name="button">Button</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="clear">Clear</string>
    <string name="go">Go</string>
    <string name="theme_default">Theme Default</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Theme Two</string>
    <string name="go_back">Go back</string>
</resources>