<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:foregroundGravity="center"
        android:rowCount="4"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <Button
            android:id="@+id/button_one"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/one"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_two"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/two"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_three"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/three"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_minus"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/minus"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_four"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/four"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_five"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/five" />

        <Button
            android:id="@+id/button_six"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/six"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_plus"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/plus"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_seven"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/seven"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_eight"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/eight"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_nine"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/nine"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_multiply"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/multiply"
            android:textSize="@dimen/button_text_size" />


        <Button
            android:id="@+id/button_equals"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/equals"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_zero"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/zero"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_dot"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/dot"
            android:textSize="@dimen/button_text_size" />


        <Button
            android:id="@+id/button_divide"
            android:alpha="0.25"
            android:insetLeft="@dimen/button_inset"
            android:insetTop="@dimen/button_inset"
            android:insetRight="@dimen/button_inset"
            android:insetBottom="@dimen/button_inset"
            android:text="@string/divide"
            android:textSize="@dimen/button_text_size" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>