<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemeActivity">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_ThemeDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_default" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_ThemeOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_one" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_ThemeTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_two" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Go_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="@dimen/button_inset_left"
        android:insetTop="@dimen/button_inset_top"
        android:insetRight="@dimen/button_inset_right"
        android:insetBottom="@dimen/button_inset_bottom"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Go_Back" />

</androidx.constraintlayout.widget.ConstraintLayout>